--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,5 @@
-attrs==20.3.0
-backcall==0.2.0
-bcrypt==3.2.0
-cachetools==4.2.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-click-plugins==1.1.1
-cligj==0.7.1
-cloudpickle==1.6.0
-cryptography==3.4.6
-cycler==0.10.0
-decorator==4.4.2
-docker==4.4.4
-Fiona==1.8.18
-geopandas==0.9.0
-glob2==0.7
-google-auth==1.27.1
-ibm-cloud-sdk-core==3.7.0
-ibm-cos-sdk==2.9.0
-ibm-cos-sdk-core==2.9.0
-ibm-cos-sdk-s3transfer==2.9.0
-ibm-vpc==0.4.1
-idna==2.10
-ipykernel==5.5.0
-ipython==7.21.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-jmespath==0.10.0
-joblib==1.0.1
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-kiwisolver==1.3.1
-kubernetes==12.0.1
-lithops==2.3.0
-lxml==4.6.2
-matplotlib==3.3.4
-munch==2.5.0
-namegenerator==1.0.6
-numpy==1.20.1
-oauthlib==3.1.0
-pandas==1.2.3
-paramiko==2.7.2
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pika==0.13.1
-Pillow==8.1.2
-prompt-toolkit==3.0.17
-ps-mem==3.12
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-Pygments==2.8.1
-PyJWT==2.0.1
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyproj==3.0.1
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.0.3
-redis==3.5.3
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scipy==1.6.1
-seaborn==0.11.1
-Shapely==1.7.1
-six==1.15.0
-tblib==1.7.0
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-urllib3==1.26.3
-wcwidth==0.2.5
-websocket-client==0.58.0
-zipfile37==0.1.3
+numpy
+geopandas
+shapely
+matplotlib
+ipywidgets
